--- a/config.yml
+++ b/config.yml
@@ -1,2 +1,3 @@
-KickMessage: &3&lYou have been kicked because the server has too many players
-NoKickMessage: &4&lSorry, no players left to kick
+KickMessage: "&3&lYou have been kicked because the server has too many players"
+NoKickMessage: "&4&lSorry, no players left to kick"
+IgnoreFull: false
